# speech_ncnn

./: CMakeLists.txt  Config.h.in  Resample.cpp  Resample.hpp  SerialPort.cpp  SerialPort.hpp  Wave.cpp  Wave.hpp  capture_wav.cpp  entry.cpp  entry.h  ncnn_speech.cpp  pthread.h
cmake/: common.cmake
imgui/: CMakeLists.txt  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  dir_iterate.cpp  dir_iterate.h  imconfig.h.in  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_helper.cpp  imgui_helper.h  imgui_internal.h  imgui_user.cpp  imgui_user.h  imgui_widgets.cpp  immat.h  stb_image.h  stb_image_write.h
imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
imgui/fonts/: mono_narrow.cpp
imgui/icons/: icons.cpp  icons.h
models/: decoder_CETS.param  encoder_CETS.param  joiner_CETS.param
ncnn/: CMakeLists.txt
ncnn/src/: CMakeLists.txt  datareader.cpp  datareader.h  gpu.cpp  layer_shader_registry.h.in  layer_shader_spv_data.h.in  mat.h  mat_pixel.cpp  mat_pixel_affine.cpp  mat_pixel_resize.cpp  mat_pixel_rotate.cpp  net.cpp  net.h  paramdict.h  platform.h.in  stb_image_write.h  vulkan_header_fix.h
ncnn/src/layer/: binaryop.cpp  innerproduct.cpp  memorydata.cpp
ncnn/src/layer/arm/: binaryop_arm.cpp  binaryop_arm_asimdhp.cpp  innerproduct_arm.cpp
ncnn/src/layer/vulkan/: pooling_vulkan.cpp
ncnn/src/layer/x86/: binaryop_x86.cpp  innerproduct_x86.cpp
speech/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  Speech.cpp  Speech.hpp  SymbolTable.cpp  SymbolTable.h  make_table.cpp  table.h
speech/fbank/: feature-fbank.cc  feature-fbank.h  feature-functions.cc  feature-functions.h  feature-window.cc  feature-window.h  log.cc  log.h  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  rfft.cc  rfft.h
